# stt

./: .gitignore  .ocamlformat  README.md  dune-project  stt.opam
core/: atom.ml  atom.mli  builtins.ml  builtins.mli  char.ml  char.mli  dune  enum.ml  enum.mli  int.ml  int.mli  stt.ml  subst.ml  subst.mli  typ.ml  typ.mli  unit.ml  unit.mli  var.ml  var.mli
core/base/: basic_printer.ml  basic_printer.mli  bdd.ml  bdd.mli  cartesian.ml  cartesian.mli  common.ml  dll.ml  dll.mli  finiteCofinite.ml  finiteCofinite.mli  hcons.ml  hcons.mli  hstring.ml  hstring.mli  interval.ml  interval.mli  pr_basic.ml  pr_basic.mli  sigs.ml  tmp.md
doc/: subtyping.md
lib/: algebra.ml  atom.ml  char.ml  char.mli  common.ml  dune  int.ml  int.mli  interval.ml  interval.mli  sigs.ml  typ.ml  typ.mli  types.ml  unit.ml  unit.mli  var.ml
lib/base/: bdd.ml  bdd.mli  common.ml  dune  finiteCofinite.ml  finiteCofinite.mli  sigs.ml
lib/utils/: dune  interval.ml  sigs.ml
parsing/: ast.ml  dune  parser.mly  sedlexer.ml  tokens.mly
syntax/: ast.ml  automaton.ml  automaton.mli  debug.sh  dune  ident.ml  letter.ml  letter.mli  lexer.ml  loc.ml  loc.mli  misc.ml  parser.mly  pretty.ml  pretty.mli  prio.ml  prio.mli  regexp.ml  regexp.mli  sedlexer.ml  syntax.ml  tokens.mly  typing.ml  typing.mli  untyping.ml
syntax/pp_regex/: automaton.mli  letter.mli  parser.ml  parser.mli  regexp.ml
syntax/pp_regexp/: automaton.ml  letter.ml  regexp.ml  regexp.mli
syntax/tmp/: automaton.ml  automaton.mli  regexp.ml  regexp.mli
test/: atom_test.ml  auto_printer.ml  bdd_test.ml  char_test.ml  dune  enum_test.ml  int_test.ml  main.expected  main.ml  parsing.ml  parsing.mli  pp_test.ml  regexp_test.ml  syntax_test.expected  syntax_test.ml  test_utils.ml  test_utils.mli  type_test.expected  type_test.ml  unit_test.ml  utils.ml  utils.mli  var_test.ml
test/core/: char_test.ml  dune  enum_test.ml  int_test.ml
test/syntax/: dune  parsing.ml  parsing.mli  pp_test.ml  regexp_test.ml  syntax_test.expected  syntax_test.ml  types.stt
tools/: format.sh
